ported solution from broken Snowpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
         // Settings for the compiler
         "outDir": "./dist/",
         "sourceMap": true,
-        "target": "es2015",
+        "target": "ES2017",
         "module": "ESNext",
     
         // Rules for your code
         "strict": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
-        "noUnusedParameters": true,
-        "noUnusedLocals": true,
+        "noUnusedParameters": false,
+        "noUnusedLocals": false,
         "noFallthroughCasesInSwitch": true,
         "noImplicitOverride": true,
 
