added animations to dazel

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -18,7 +18,7 @@
         {
             "name": "textures",
             "assets": {
-                "dazel": "textures/dazel.png"
+                "dazel": "textures/dazel.json"
             }
         },
         {
