--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@pixi/filter-color-overlay": "^5.0.0",
     "pixi.js": "^7.0.0"
   },
   "devDependencies": {
